syntax = "proto3";

import "item.proto";

package dropnshop;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder (GetOrderRequest) returns (OrderResponse);
  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
}

message OrderLine {
  int32 id = 1;
  Item item = 2;
  double price = 3;
  int32 quantity = 4;
  string createdAt = 5;
}

message Order {
  int32 id = 1;
  int32 userId = 2;
  string shippingAddress = 3;
  string createdAt = 4;
  repeated OrderLine orderLines = 5;
}

message CreateOrderLineRequest {
  int32 itemId = 1;
  double price = 2;
  int32 quantity = 3;
}

message CreateOrderRequest {
  int32 userId = 1;
  string shippingAddress = 2;
  repeated CreateOrderLineRequest orderLines = 3;
}

message GetOrderRequest {
  int32 id = 1;
}

message ListOrdersRequest {}

message OrderResponse {
  Order order = 1;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}
